# tinygui

./: Cargo.toml
src/: buttons.rs  input_handler.rs  lib.rs  main.rs  renderer.rs  screen.rs  view.rs
src/shape/: bitmap.rs  line.rs  mod.rs  rect.rs  section.rs  text.rs
src/views/: boids.rs  helloworld.rs  input.rs  menu.rs  mod.rs
