[package]
name = "tinygui"
version = "0.1.0"
authors = ["lyneca <lukemtuthill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = ["hal"] }
ssd1306 = "0.2.6"
embedded-graphics = "^0.4.5"
