[package]
name = "tinygui"
version = "0.1.0"
authors = ["lyneca <lukemtuthill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = ["hal"] }
ssd1306 = "0.2.6"
embedded-graphics = "^0.4.5"
reqwest = { version = "0.10", features = ["json", "blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"

nalgebra = "0.20"
rand = "0.7.3"
rascam = "0.0.2"
chrono = "0.4.13"

[lib]
name = "tinygui"
path = "src/lib.rs"

[[bin]]
name = "tinygui"
path = "src/main.rs"
